<package format="2">
  <name>rqt_srv</name>
  <version>1.2.2</version>
  <description>A Python GUI plugin for introspecting available ROS service types.</description>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_srv</url>
  <url type="repository">https://github.com/ros-visualization/rqt_srv</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_srv/issues</url>

  <author>Aaron Blasdel</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author email="mikeblautman@gmail.com">Michael Lautman</author>

  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_msg</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_python</build_type>
  </export>
</package>
