<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_default_generators</name>
  <version>1.6.0</version>
  <description>A configuration package defining the default ROS interface generators.</description>

  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>

  <license>Apache License 2.0</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Code generation for Actions depends on action_msgs -->
  <buildtool_export_depend>action_msgs</buildtool_export_depend>
  <buildtool_export_depend>service_msgs</buildtool_export_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <buildtool_export_depend>rosidl_core_generators</buildtool_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
